# eBay-analysis-toolkit

./: .env.example  .gitignore  README.md  pyproject.toml
docs/plans/: 2026-01-14-ebay-tracker-design.md  2026-01-14-ebay-tracker-implementation.md
src/ebay_tracker/: __init__.py  analyzer.py  categories.py  cli.py  config.py  db.py  models.py  scraper.py
tests/: test_analyzer.py  test_cli.py  test_config.py  test_db.py  test_integration.py  test_models.py  test_scraper.py
tests/fixtures/: ebay_sold_listings.html
